[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sufi2"
version     = "1.0.0"
description = "SUFI-2 SWAT Multi-Reach Calibration Tool"
readme      = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[project.scripts]
sufi2 = "sufi2.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sufi2*"]

[tool.setuptools.package-data]
"sufi2.ui" = ["*.html", "*.css", "*.js"]
