[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sufi2"
version     = "2.1.0"
description = "Hydro-Modeller — SWAT Hydrological Calibration Tool"
readme      = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[project.scripts]
sufi2 = "sufi2.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sufi2*"]

[tool.setuptools.package-data]
"sufi2.ui" = ["*.html", "*.css", "*.js"]
